Bug 495491, added editor thread collapse/expand and comment counts to history table, r=clouserw
git-svn-id: http://svn.mozilla.org/addons/trunk@28901 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/site/app/webroot/css/editors.css
+++ b/site/app/webroot/css/editors.css
@@ -124,12 +124,14 @@ input#FilterAddonOrAuthor {
 }
 .commentHeader {
     font-weight: bold;
+}
+.commentDepth0 .commentHeader {
     background: url('../img/icn-collapse.png') no-repeat top right;
 }
-.html-rtl .commentHeader {
+.html-rtl .commentDepth0 .commentHeader {
     background-position: top left;
 }
-.commentHeader.collapsed {
+.commentDepth0 .commentHeader.collapsed {
     background-image: url('../img/icn-expand.png');
 }
 .commentSubheader {
